# NaviWasm

./: .env  .env.sample  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  INSTALL.md  README.md  SECURITY.md  docker-compose.yml  monitoring.md  tasks.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  create_favicon.py  main.py  requirements-wasm.txt  requirements.txt
backend/app/: config.py
backend/app/api/v1/: router.py
backend/app/auth/: auth.py
backend/app/core/: config.py  errors.py
backend/app/middleware/: error_handler.py  rate_limiter.py
backend/app/models/: navigation.py
backend/app/services/: navigation_service.py  service_locator.py  wasm_service.py
backend/app/utils/: logger.py
backend/tests/: test_navigation.py
cli/: cli.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  INSTALL-CARGO.md  INSTALL-FRAMEWORKS.md  INSTALL.md  MONITORING.md  NETWORK_TROUBLESHOOTING.md  NODE_OPENSSL_WORKAROUND.md  NPM_TROUBLESHOOTING.md  SECURITY.md  STARTUP_GUIDE.md
e2e/integration/: map_spec.js
frontend/: .eslintrc.json  Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/public/: index.html
frontend/src/: App.css  App.js  App.test.js  App.tsx  index.css  index.ts  index.tsx  sentry.js  types.d.ts
frontend/src/components/: FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  MapSection.tsx  Navigation.tsx
frontend/src/utils/: envValidation.ts
nginx/: nginx.conf
tests/backend/: test_logging.py  test_navigation.py
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
(+3 files in other folders)
